--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ section {
   gap: 10em;
   width: 100%;
   height: 100vh;
-
+  overflow: hidden;
   z-index: 0;
 }
 
